--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Welcome to HELL!!!</h1>
     <p>Check in time now,check out time NEVER!</p>
-    <blockquote>Dwight k. Schrute</blockquote>
+    <blockquote>-Dwight k. Schrute</blockquote>
 </body>
 </html>
